# smatter

./: Cargo.toml  README.md
.cargo/: config.toml
data/cartridges/: machinegun_bullet.yaml  template.yaml
data/guns/: machinegun.yaml  template.yaml
data/ships/: temp.yaml  template.yaml
src/: game_io.rs  main.rs  simulation.rs
src/simulation/: camera.rs  cartridge_list.rs  gun.rs  gun_list.rs  interaction.rs  physics.rs  projectile.rs  ship.rs  ship_list.rs  spawning.rs  targeting.rs  turret.rs  turret_list.rs
